fix up ssr layouts and add tests

--- a/ssr/package.json
+++ b/ssr/package.json
@@ -4,6 +4,9 @@
   "description": "Server side rendering for Peak",
   "type": "module",
   "main": "index.js",
+  "scripts": {
+    "test": "node tests"
+  },
   "dependencies": {
     "linkedom": "^0.18.5"
   },
