--- a/vite-plugin/package.json
+++ b/vite-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@peak-js/vite-plugin",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Vite plugin for Peak.js framework with HMR support",
   "type": "module",
   "main": "index.js",
@@ -31,6 +31,6 @@
     "node-html-parser": "^6.1.0"
   },
   "peerDependencies": {
-    "vite": "^4.0.0 || ^5.0.0"
+    "vite": ">=4.0.0"
   }
 }
