--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "npx playwright test --config tests/playwright.config.js"
   },
   "devDependencies": {
-    "playwright": "^1.0.0"
+    "@playwright/test": "1.55.0"
   },
   "repository": {
     "type": "git",
